{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 514,
  "lineage": "6c8ceb0b-5e66-5f18-f0fe-8c6f4e439d07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "liorm-TF-easy-EC2-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:644435390668:instance/i-0b9d45a5353a4ff63",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9d45a5353a4ff63",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "liorm-tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b45149adf4685c5f",
            "private_dns": "ip-10-0-1-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_ip": "44.206.251.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
                  "AutoTag_Creator": "liorm"
                },
                "throughput": 0,
                "volume_id": "vol-0874cddbe5a485129",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e54e456621f7c308",
            "tags": {
              "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-instance-1a"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-instance-1a",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06eb805cabbe041db"
            ]
          },
          "dependencies": [
            "aws_key_pair.liorm-tf-key",
            "aws_security_group.liorm-TF-easy-SG",
            "aws_subnet.liorm-TF-easy-us-east-1a",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "liorm-TF-easy-EC2-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:644435390668:instance/i-0f67d6969f42f588e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f67d6969f42f588e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "liorm-tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e46e7914aa6b43f",
            "private_dns": "ip-10-0-2-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.23",
            "public_ip": "52.7.141.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
                  "AutoTag_Creator": "liorm"
                },
                "throughput": 0,
                "volume_id": "vol-0dc4f143dea75907b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe336d847c3d2876",
            "tags": {
              "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-instance-1b"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-instance-1b",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06eb805cabbe041db"
            ]
          },
          "dependencies": [
            "aws_key_pair.liorm-tf-key",
            "aws_security_group.liorm-TF-easy-SG",
            "aws_subnet.liorm-TF-easy-us-east-1b",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "liorm-TF-easy-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:internet-gateway/igw-0a045666ba5dfed0f",
            "id": "igw-0a045666ba5dfed0f",
            "owner_id": "644435390668",
            "tags": {
              "Name": "liorm-TF-easy-igw"
            },
            "tags_all": {
              "Name": "liorm-TF-easy-igw",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-054b4ae7a7152ff98"
          },
          "dependencies": [
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "liorm-TF-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:loadbalancer/app/liorm-TF-ALB/a5fcdb8b3bb2b951",
            "arn_suffix": "app/liorm-TF-ALB/a5fcdb8b3bb2b951",
            "desync_mitigation_mode": "defensive",
            "dns_name": "liorm-TF-ALB-302812200.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:loadbalancer/app/liorm-TF-ALB/a5fcdb8b3bb2b951",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "liorm-TF-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06eb805cabbe041db"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e54e456621f7c308"
              },
              {
                "subnet_id": "subnet-0fe336d847c3d2876"
              }
            ],
            "subnets": [
              "subnet-0e54e456621f7c308",
              "subnet-0fe336d847c3d2876"
            ],
            "tags": {
              "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-ALB"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-16T13:22:10Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-ALB",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-054b4ae7a7152ff98",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.liorm-TF-easy-SG",
            "aws_subnet.liorm-TF-easy-us-east-1a",
            "aws_subnet.liorm-TF-easy-us-east-1b",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:listener/app/liorm-TF-ALB/a5fcdb8b3bb2b951/87a050e065c96b2d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:listener/app/liorm-TF-ALB/a5fcdb8b3bb2b951/87a050e065c96b2d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:loadbalancer/app/liorm-TF-ALB/a5fcdb8b3bb2b951",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.liorm-TF-ALB",
            "aws_lb_target_group.liorm-TF-easy-ALB-TG",
            "aws_security_group.liorm-TF-easy-SG",
            "aws_subnet.liorm-TF-easy-us-east-1a",
            "aws_subnet.liorm-TF-easy-us-east-1b",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "liorm-TF-easy-ALB-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183",
            "arn_suffix": "targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "liorm-TF-easy-ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054b4ae7a7152ff98"
          },
          "dependencies": [
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "liorm-tg-attach-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183-20230916132223468600000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183",
            "target_id": "i-0b9d45a5353a4ff63"
          },
          "dependencies": [
            "aws_instance.liorm-TF-easy-EC2-1a",
            "aws_key_pair.liorm-tf-key",
            "aws_lb_target_group.liorm-TF-easy-ALB-TG",
            "aws_security_group.liorm-TF-easy-SG",
            "aws_subnet.liorm-TF-easy-us-east-1a",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "liorm-tg-attach-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183-20230916132223768900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:644435390668:targetgroup/liorm-TF-easy-ALB-TG/8e32f08ef2eae183",
            "target_id": "i-0f67d6969f42f588e"
          },
          "dependencies": [
            "aws_instance.liorm-TF-easy-EC2-1b",
            "aws_key_pair.liorm-tf-key",
            "aws_lb_target_group.liorm-TF-easy-ALB-TG",
            "aws_security_group.liorm-TF-easy-SG",
            "aws_subnet.liorm-TF-easy-us-east-1b",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liorm-TF-easy-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:route-table/rtb-082ffa4773edf327c",
            "id": "rtb-082ffa4773edf327c",
            "owner_id": "644435390668",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "liorm-TF-easy-RT"
            },
            "tags_all": {
              "Name": "liorm-TF-easy-RT",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "timeouts": null,
            "vpc_id": "vpc-054b4ae7a7152ff98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liorm-TF-easy-pub-assoc-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0924df51351c4f8b0",
            "route_table_id": "rtb-082ffa4773edf327c",
            "subnet_id": "subnet-0e54e456621f7c308"
          },
          "dependencies": [
            "aws_route_table.liorm-TF-easy-RT",
            "aws_subnet.liorm-TF-easy-us-east-1a",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liorm-TF-easy-pub-assoc-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0421bdb47d28db2da",
            "route_table_id": "rtb-082ffa4773edf327c",
            "subnet_id": "subnet-0fe336d847c3d2876"
          },
          "dependencies": [
            "aws_route_table.liorm-TF-easy-RT",
            "aws_subnet.liorm-TF-easy-us-east-1b",
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liorm-TF-easy-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:security-group/sg-06eb805cabbe041db",
            "description": "Allow incoming HTTP traffic from your IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06eb805cabbe041db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "147.235.208.237/32",
                  "89.138.129.95/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "liorm-TF-easy-SG",
            "name_prefix": "",
            "owner_id": "644435390668",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "timeouts": null,
            "vpc_id": "vpc-054b4ae7a7152ff98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liorm-TF-easy-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:subnet/subnet-0e54e456621f7c308",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e54e456621f7c308",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoTag_CreateTime": "2023-09-16T13:21:57Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-us-east-1a"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-16T13:21:57Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-us-east-1a",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-054b4ae7a7152ff98"
          },
          "dependencies": [
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liorm-TF-easy-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:subnet/subnet-0fe336d847c3d2876",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe336d847c3d2876",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644435390668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AutoTag_CreateTime": "2023-09-16T13:21:57Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-us-east-1b"
            },
            "tags_all": {
              "AutoTag_CreateTime": "2023-09-16T13:21:57Z",
              "AutoTag_Creator": "liorm",
              "Name": "liorm-TF-easy-us-east-1b",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            },
            "vpc_id": "vpc-054b4ae7a7152ff98"
          },
          "dependencies": [
            "aws_vpc.liorm-TF-easy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "liorm-TF-easy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:644435390668:vpc/vpc-054b4ae7a7152ff98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d77d7b4a14bbaad",
            "default_route_table_id": "rtb-069a3452c9f3b9ed7",
            "default_security_group_id": "sg-0aea8368bc6d6bd27",
            "dhcp_options_id": "dopt-32015149",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054b4ae7a7152ff98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-069a3452c9f3b9ed7",
            "owner_id": "644435390668",
            "tags": {
              "Name": "liorm-TF-easy"
            },
            "tags_all": {
              "Name": "liorm-TF-easy",
              "Owner": "liorm",
              "bootcamp": "19",
              "expiration_date": "01-01-2025"
            }
          }
        }
      ]
    }
  ]
}